--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -27,6 +29,15 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.9.0</version>
+				<configuration>
+					<source>17</source>
+					<target>17</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.1</version> <!-- Use the version appropriate for your project -->
 				<executions>
@@ -39,13 +50,13 @@
 					</execution>
 				</executions>
 				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
+					<!-- <testFailureIgnore>true</testFailureIgnore> -->
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.3</version>
+				<version>0.8.9</version>
 				<executions>
 					<execution>
 						<id>prepare-agent</id>
@@ -69,15 +80,15 @@
 						<configuration>
 							<!-- Sets the path to the file which contains the execution data. -->
 
-							<dataFile>target/jacoco.exec</dataFile>
+							<dataFile>target\jacoco.exec</dataFile>
 							<!-- Sets the output directory for the code coverage report. -->
-							<outputDirectory>target/my-reports</outputDirectory>
+							<outputDirectory>target\my-reports</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
 				<configuration>
 					<systemPropertyVariables>
-						<jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+						<jacoco-agent.destfile>target\jacoco.exec</jacoco-agent.destfile>
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
